default setting 70% (사이드바 href 변경필요, main/index 경로 설정 필요)

--- a/templates/board/index.html
+++ b/templates/board/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>BOARD</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<h1>board</h1>
+
+{% endblock %}
