--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,7 +1,7 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'main' %}">
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i> <!-- 영이공 이미지 들고 오기 -->
         </div>
@@ -21,7 +21,7 @@
     <hr class="sidebar-divider my-0">
 
     <li class="nav-item active">
-        <a class="nav-link" href="/board">
+        <a class="nav-link" href="{% url 'board_index' %}">
             <i class="fas fa-fw fa-table"></i>
             <span>BOARD</span>
         </a>
@@ -31,7 +31,7 @@
     <hr class="sidebar-divider my-0">
 
     <li class="nav-item active">
-        <a class="nav-link" href="/protect_board">
+        <a class="nav-link" href="{% url 'protect_board_index' %}">
             <i class="fas fa-fw fa-table"></i>
             <span>PROTECT_BOARD</span>
         </a>
