--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,7 +3,7 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'main' %}">
         <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink"></i> <!-- 영이공 이미지 들고 오기 -->
+            <i class="fas fa-laugh-wink" ></i> <!-- 영이공 이미지 들고 오기 -->
         </div>
         <div class="sidebar-brand-text mx-3">Web Project</div>
     </a>
@@ -21,7 +21,7 @@
     <hr class="sidebar-divider my-0">
 
     <li class="nav-item active">
-        <a class="nav-link" href="{% url 'board_index' %}">
+        <a class="nav-link" href="{% url 'board_index' %}"> {# 버튼 클릭 시 board/urls 에서 설정한 name이 board_index로 이동함 #}
             <i class="fas fa-fw fa-table"></i>
             <span>BOARD</span>
         </a>
