--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,25 +1,41 @@
+{# 페이징하는 건 글이 4개 이상일 경우로 설정 #}
+{# table 버리고 지금 main처럼 글 보이게 하기 #}
+{# 글쓰기 버튼은 왼쪽 하단에 추가하기 #}
+{# 페이징은 오른쪽 하단에 추가 #}
+
 {% extends 'base.html' %}
 
 {% block content %}
-
-    <h1 class="h3 mb-4 text-gray-800">팀 소개</h1>
+    {# 아래 검색이랑 title 출력하는건 base로 block 다시 빼서 중복 사용 가능하도록 구현하기 #}
+    <div class> {# 클래스 하나 만들고 css에 div 반으로 나누는 거 추가 #}
+        <h1 class="h3 mb-4 text-gray-800">자기 소개</h1>
     
-    {% with title="오상엽" description="자기 소개" position="팀장" img=""%}
+        <div class="input-group mb-3">
+            <input type="text" class="form-control small" id="search" placeholder="input..."  >
+            <button class="btn btn-primary" type="submit" id="button">
+                <i class="fas fa-search fa-sm"></i>
+            </button>
+        </div>
+    </div>
+
+
+    {% with title="오상엽" description="자기 소개" link="https://github.com/hunyoungcha" img=""%}
         {% include 'main/card.html' %}
     {% endwith %}
 
-    {% with title="유경미" description="자기 소개" position="팀원"%}
+    {% with title="유경미" description="자기 소개" link="https://github.com/hunyoungcha" %}
         {% include 'main/card.html' %}
     {% endwith %}
 
 
-    {% with title="이지민" description="자기 소개" position="팀원"%}
+    {% with title="이지민" description="자기 소개" link="https://github.com/hunyoungcha" %}
         {% include 'main/card.html' %}
     {% endwith %}
 
 
-    {% with title="차훈영" description="자기 소개" position="팀원"%}
+    {% with title="차훈영" description="자기 소개" link="https://github.com/hunyoungcha" %}
         {% include 'main/card.html' %}
     {% endwith %}
+
 
 {% endblock %}
