--- a/templates/main/card.html
+++ b/templates/main/card.html
@@ -1,17 +1,27 @@
 {% load static %}
 
-<div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-        <img src="{% static '/img/logo.png' %}" class="img-fluid rounded-start" alt="Not Found">
-    </div>
+{#<div class="card mb-3" style="max-width: 540px;">#}
+{#  <div class="row g-0">#}
+{#    <div class="col-md-4">#}
+{#        <img src="{% static '/img/logo.png' %}" class="img-fluid rounded-start" alt="Not Found">#}
+{#    </div>#}
+{##}
+{#    <div class="col-md-8">#}
+{#        <div class="card-body">#}
+{#            <h5 class="card-title">{{ title }}</h5>#}
+{#            <p class="card-text">{{ description }}</p>#}
+{#            <p class="card-text"><small class="text-body-secondary">{{ position }}</small></p>#}
+{#        </div>#}
+{#    </div>#}
+{#  </div>#}
+{#</div>#}
 
-    <div class="col-md-8">
-        <div class="card-body">
-            <h5 class="card-title">{{ title }}</h5>
-            <p class="card-text">{{ description }}</p>
-            <p class="card-text"><small class="text-body-secondary">{{ position }}</small></p>
-        </div>
-    </div>
+
+<div class="card mb-3">
+{#  <img src="{% static '/img/logo.png' %}" class="card-img-top" alt="...">#}
+  <div class="card-body">
+    <h5 class="card-title">{{ title }}</h5>
+    <p class="card-text">{{ description }}</p>
+    <a href="{{ link }}"><small class="text-body-secondary">{{ link }}</small></a>
   </div>
 </div>
