--- a/templates/main/card.html
+++ b/templates/main/card.html
@@ -16,12 +16,12 @@
 {#  </div>#}
 {#</div>#}
 
-
-<div class="card mb-3">
+{##}
+{#<div class="card mb-3">#}
 {#  <img src="{% static '/img/logo.png' %}" class="card-img-top" alt="...">#}
-  <div class="card-body">
-    <h5 class="card-title">{{ title }}</h5>
-    <p class="card-text">{{ description }}</p>
-    <a href="{{ link }}"><small class="text-body-secondary">{{ link }}</small></a>
-  </div>
-</div>
+{#  <div class="card-body">#}
+{#    <h5 class="card-title">{{ title }}</h5>#}
+{#    <p class="card-text">{{ description }}</p>#}
+{#    <small class="text-body-secondary">{{ position }}</small>#}
+{#  </div>#}
+{#</div>#}
