--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,9 +3,9 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'main' %}">
         <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink" ></i> <!-- 영이공 이미지 들고 오기 -->
+            <i class="fas fa-laugh-wink" ></i> <!-- fa 아이콘 변경하기 -->
         </div>
-        <div class="sidebar-brand-text mx-3">Web Project</div>
+        <div class="sidebar-brand-text mx-3">BOARD SITE</div>
     </a>
 
 {#    <hr class="sidebar-divider my-0">#}
@@ -23,7 +23,27 @@
     <li class="nav-item active">
         <a class="nav-link" href="{% url 'board_index' %}"> {# 버튼 클릭 시 board/urls 에서 설정한 name이 board_index로 이동함 #}
             <i class="fas fa-fw fa-table"></i>
-            <span>BOARD</span>
+            <span>STORED_XSS</span>
+        </a>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider my-0">
+
+    <li class="nav-item active">
+        <a class="nav-link" href="{% url 'protect_board_index' %}">
+            <i class="fas fa-fw fa-table"></i>
+            <span>REFLECTED_XSS</span>
+        </a>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider my-0">
+
+    <li class="nav-item active">
+        <a class="nav-link" href="{% url 'protect_board_index' %}">
+            <i class="fas fa-fw fa-table"></i>
+            <span>DOM_BASE_XSS</span>
         </a>
     </li>
 
