--- a/templates/board/index.html
+++ b/templates/board/index.html
@@ -1,69 +1,25 @@
 {% extends 'base.html' %}
 
-{% block head %}
-    {# DataTable을 사용하기 위해 load #}
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script> {# DataTable은 jQuery 라이브러리에 의존하기 때문에 jQuery도 함께 로드 #}
-    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-{% endblock %}
-
 {% block content %}
-
-    
-{#     생성된 table을 dataTable로 만드는 js 코드#}
-    <script>
-        $(document).ready(function() {
-            $('#dataTable').DataTable();
-        });
-
-    </script>
-{#     $(document).ready(function() : 페이지가 로드되면 실행될 함수를 생성#}
-{#     $('#dataTable').DataTable : DataTable함수를 사용해서 id가 dataTable인 요소를 선택해서 그 테이블을 DataTable로 만들어 줌#}
-
-        
         <!-- Page Heading -->
     <h1 class="h3 mb-2 text-gray-800">취약한 게시판</h1>
     <p class="mb-4">이 페이지는 취약한 게시판 페이지 입니다.</p>
 
-
-    <div class="card shadow mb-4">
-        <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
-        </div>
-        <div class="card-body">
-            <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                    <thead>
-                        <tr>
-                            <th>번호</th>
-                            <th>제목</th>
-                            <th>글쓴이</th>
-                            <th>작성일</th>
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                        {% if rows%}
-                            {% for row in rows %}
-                                <tr>
-                                    <td>{{ row.0 }}</td> {# 글 ID #}
-                                    <td><a href="">{{ row.2 }}</a></td> {# 글 제목 #}
-                                    <td>Anonymous</td> {# 글쓴이 #}
-                                    <td>{{ row.4 }}</td> {# 작성일 #}
-                                </tr>
-                            {% endfor %}
-
+    {% if rows %}
+        {% for row in rows %}
+            <a href="/" style="text-decoration: none"> {# a태그 글 확인 페이지/pageid={{ row.1 }} 로 변경하기 #}
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ row.2 }}</h5>
+                        {% if row.3|length > 20 %}
+                            <p class="card-text">{{ row.3|slice:"20" }}...</p>
                         {% else %}
-                            <tr>
-                                <td></td>
-                                <td>작성된 글이 없습니다.</td>
-                            </tr>
+                            <p class="card-text">{{ row.3 }}</p>
                         {% endif %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-
+                        <p class="card-text"><small class="text-body-secondary">Anonymous</small></p>
+                    </div>
+                </div>
+            </a>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
