index페이지 이미지 추가 완료

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -11,7 +11,7 @@
     <div class="row">
 
         <div class="col-6">
-            {% with title="오상엽" description="자기 소개" position="팀장" img=""%}
+            {% with title="오상엽" description="안녕하세요" position="2037010" img="/img/sangyup.jpg"%}
                 {% include 'main/card.html' %}
             {% endwith %}
 
@@ -19,7 +19,7 @@
 
         <div class="col-6">
 
-            {% with title="유경미" description="자기 소개" position="팀원" %}
+            {% with title="유경미" description="자기 소개" position="팀원" img="/img/logo.png"%}
                 {% include 'main/card.html' %}
             {% endwith %}
 
@@ -29,14 +29,14 @@
 
         <div class="col-6 ">
 
-            {% with title="이지민" description="자기 소개" position="팀원" %}
+            {% with title="이지민" description="자기 소개" position="팀원" img="/img/jimin.jpg"%}
                 {% include 'main/card.html' %}
             {% endwith %}
         </div>
 
         <div class="col-6">
 
-        {% with title="차훈영" description="자기 소개" position="팀원" %}
+        {% with title="차훈영" description="자기 소개" position="팀원" img="/img/logo.png" %}
             {% include 'main/card.html' %}
         {% endwith %}
         </div>
