--- a/templates/main/card.html
+++ b/templates/main/card.html
@@ -7,7 +7,7 @@
 {#    </div>#}
 
 <div class="card" style="width: 100%; margin-bottom: 20px">
-  <img src="{% static 'img/logo.png' %}" class="card-img-top" style="max-height: 280px; object-fit: cover">
+  <img src="{% static img %}" class="card-img-top" style="max-height: 280px;">
   <div class="card-body">
     <h5 class="card-title">{{ title }}</h5>
     <p class="card-text">{{ description }}</p>
