글 생성 구현 완료

--- a/templates/board/index.html
+++ b/templates/board/index.html
@@ -7,7 +7,7 @@
             <p class="mb-4">이 페이지는 취약한 게시판 페이지 입니다.</p>
         </div>
         <div>
-            <a class="btn btn-primary" href="/board/" style="text-decoration: none;">글 생성</a>
+            <a class="btn btn-primary" href="/board/create/" style="text-decoration: none;">글 생성</a>
         </div>
      </div>
     
