--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -19,7 +19,7 @@
 
         <div class="col-6">
 
-            {% with title="유경미" description="자기 소개" position="팀원" img="/img/logo.png"%}
+            {% with title="유경미" description="자기 소개" position="팀원" img="/img/kyeongmi.jpg"%}
                 {% include 'main/card.html' %}
             {% endwith %}
 
