--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -31,7 +31,7 @@
     <hr class="sidebar-divider my-0">
 
     <li class="nav-item active">
-        <a class="nav-link" href="{% url 'protect_board_index' %}">
+        <a class="nav-link" href="{% url 'reflected_board:index' %}">
             <i class="fas fa-fw fa-table"></i>
             <span>REFLECTED_XSS</span>
         </a>
