dom base 기본 틀 구현

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -41,7 +41,7 @@
     <hr class="sidebar-divider my-0">
 
     <li class="nav-item active">
-        <a class="nav-link" href="{% url 'protect_board_index' %}">
+        <a class="nav-link" href="{% url 'dom_board:board_index' %}">
             <i class="fas fa-fw fa-table"></i>
             <span>DOM_BASE_XSS</span>
         </a>
