--- a/templates/dom_board/index.html
+++ b/templates/dom_board/index.html
@@ -1,3 +1,11 @@
+{# 크롬과 같은 브라우저에서는 일반 적인 dom base 의 스크립트는 동작하지 않음 #}
+{# CSP라는 보호 정책이 브라우저에 기본적으로 동작하기 때문#}
+{# CSP란 Content Security Policy로 브라우저에 로드되는 모든 컨텐츠에 대한 보안 정책 #}
+
+{# 때문에 공격 스크립트를 다르게 해야 함 #}
+{# <img src=1 onerror=alert(1)>  #}
+
+
 {% extends 'base.html' %}
 
 
@@ -63,13 +71,13 @@
         </nav>
 
     {% endif %}
-    
+
     
 <script>
     const urlParams = new URLSearchParams(window.location.search); //현재 url의 파라미터 값을 가져오는 코드
     const search = urlParams.get('search'); // 가져온 파라미터 중 searh의 값을 가져오는 코드
 
-    
+
     if (search) {
         document.getElementById('desc').innerHTML = `"${search}"에 대한 검색 결과입니다.`;
     } else {
