--- a/templates/dom_board/create.html
+++ b/templates/dom_board/create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <form method="post" action="/board/create/">
+    <form method="post" action="./">
         {% csrf_token %}
 
         {# title form #}
