--- a/templates/reflected_board/detail.html
+++ b/templates/reflected_board/detail.html
@@ -14,7 +14,7 @@
     </div>
 
 
-    <form method="post" action="/board/detail/{{ id }}/">
+    <form method="post" action="./">
         {% csrf_token %}
         <div style="margin-top: 10px; display: flex; align-items: center; gap: 10px; justify-content: flex-end">
 
