--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -51,7 +51,7 @@
     <hr class="sidebar-divider my-0">
 
     <li class="nav-item active">
-        <a class="nav-link" href="{% url 'protect_board_index' %}">
+        <a class="nav-link" href="{% url 'protect_board:board_index' %}">
             <i class="fas fa-fw fa-table"></i>
             <span>PROTECT_BOARD</span>
         </a>
