기능 구현 최종 완료, 디자인 수정 필요

--- a/templates/board/create.html
+++ b/templates/board/create.html
@@ -31,10 +31,9 @@
         </div>
     </form>
 
-    {% if alert_message %}
-        <script>
-            alert('{{ alert_message }}')
-        </script>
+    {% if messages %}
+        {% for message in messages %}
+            <script>alert('{{ message }}')</script>
+        {% endfor %}
     {% endif %}
-
 {% endblock %}
