--- a/templates/board/detail.html
+++ b/templates/board/detail.html
@@ -33,4 +33,12 @@
 
         </div>
     </form>
+    
+    
+    {% if messages %}
+        {% for message in messages %}
+            <script>alert('{{ message }}')</script>
+        {% endfor %}
+    {% endif %}
+    
 {% endblock %}
