--- a/templates/board/index.html
+++ b/templates/board/index.html
@@ -52,4 +52,11 @@
         </nav>
 
     {% endif %}
+
+
+    {% if messages %}
+        {% for message in messages %}
+            <script>alert('{{ message }}')</script>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
