--- a/templates/protect_board/index.html
+++ b/templates/protect_board/index.html
@@ -3,12 +3,12 @@
 {% block content %}
      <div class="d-flex justify-content-between align-items-center">
         <div>
-            <h1 class="h3 mb-2 text-gray-800">Reflected XSS Board</h1>
+            <h1 class="h3 mb-2 text-gray-800">Protect Board</h1>
             {% if search %}
                 <p class="mb-4">"{{ search }}"에 대한 검색 결과입니다.</p>
                 
             {% else %}
-                <p class="mb-4">이 페이지는 취약한 게시판 페이지 입니다.</p>
+                <p class="mb-4">이 페이지는 안전한 게시판 페이지 입니다.</p>
                 
             {% endif %}
         </div>
@@ -69,4 +69,11 @@
         </nav>
 
     {% endif %}
+    
+    {% if messages %}
+        {% for message in messages %}
+            <script>alert('{{ message }}')</script>
+        {% endfor %}
+    {% endif %}
+    
 {% endblock %}
