--- a/templates/reflected_board/index.html
+++ b/templates/reflected_board/index.html
@@ -69,4 +69,11 @@
         </nav>
 
     {% endif %}
+    
+    {% if messages %}
+        {% for message in messages %}
+            <script>alert('{{ message }}')</script>
+        {% endfor %}
+    {% endif %}
+    
 {% endblock %}
