stored page 검색 기능 추가

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -36,7 +36,7 @@
 
         <div class="col-6">
 
-        {% with title="차훈영" description="자기 소개" position="팀원" img="/img/logo.png" %}
+        {% with title="차훈영" description="자기 소개" position="팀원" img="/img/hunyoung.png" %}
             {% include 'main/card.html' %}
         {% endwith %}
         </div>
