--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,7 +3,7 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'main' %}">
         <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink" ></i> <!-- fa 아이콘 변경하기 -->
+            <i class="fas fa-edit"></i>
         </div>
         <div class="sidebar-brand-text mx-3">BOARD SITE</div>
     </a>
