--- a/templates/reflected_board/index.html
+++ b/templates/reflected_board/index.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </form>
-            <a class="btn btn-primary" href="/board/create/" style="text-decoration: none;">글 생성</a>
+            <a class="btn btn-primary" href="./create/" style="text-decoration: none;">글 생성</a>
         </div>
      </div>
     
