href 에러 수정, 디자인 수정

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -9,13 +9,13 @@
             <div class="row">
 
             <div class="col-6">
-                {% with title="오상엽" description="안녕하세요" position="2037010" img="/img/sangyup.jpg"%}
+                {% with title="오상엽" description="2337026" img="/img/sangyup.jpg"%}
                     {% include 'main/card.html' %}
                 {% endwith %}
             </div>
 
             <div class="col-6">
-                {% with title="유경미" description="자기 소개" position="팀원" img="/img/kyeongmi.jpg"%}
+                {% with title="유경미" description="2337027" position="팀원" img="/img/kyeongmi.jpg"%}
                     {% include 'main/card.html' %}
                 {% endwith %}
             </div>
@@ -24,13 +24,13 @@
             <div class="row">
 
                 <div class="col-6 ">
-                    {% with title="이지민" description="자기 소개" position="팀원" img="/img/jimin.jpg"%}
+                    {% with title="이지민" description="2337037" position="팀원" img="/img/jimin.jpg"%}
                         {% include 'main/card.html' %}
                     {% endwith %}
                 </div>
 
                 <div class="col-6">
-                    {% with title="차훈영" description="자기 소개" position="팀원" img="/img/hunyoung.png" %}
+                    {% with title="차훈영" description="2037010" position="팀원" img="/img/hunyoung.png" %}
                         {% include 'main/card.html' %}
                     {% endwith %}
                 </div>
