--- a/templates/main/card.html
+++ b/templates/main/card.html
@@ -10,6 +10,6 @@
   <img src="{% static img %}" class="card-img-top" style="max-height: 280px;">
   <div class="card-body">
     <h5 class="card-title">{{ title }}</h5>
-    <p class="card-text">{{ description }}</p>
+    <p class="card-text">학번: {{ description }}</p>
   </div>
 </div>
