--- a/templates/board/detail.html
+++ b/templates/board/detail.html
@@ -9,8 +9,8 @@
 
 
     <div class="form-floating mb-3">
-      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px" disabled> {{ body|safe }}</textarea>
-      <label for="floatingTextarea2Disabled"></label>
+      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px" disabled></textarea>
+      <label for="floatingTextarea2Disabled">{{ body|safe }}</label>
     </div>
 
 
